gcc/testsuite/rust/rustc/ui/block-result/block-must-not-have-result-do.rs
fn main() {
    loop {
        true // { dg-error ".E0308." "" { target *-*-* } }
    }
}

